Fixed Spacing and resized images

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,23 @@
 body {
     
 }
+h1{
+  color: antiquewhite;
+}
+h2 {
+  color: antiquewhite;
+}
+h3{
+  color: antiquewhite;
+}
+
+li{
+  color: antiquewhite;
+}
+
+p{
+  color: antiquewhite
+}
 
 .btn_animation{
     font-weight: 700;
@@ -17,15 +34,15 @@ body {
     line-height: 2.5rem ;
     background-color: black;
     position: relative;
-    box-shadow: rgba(68, 68, 148, 0.25) 0px 50px 100px -20px, rgba(237, 41, 41, 0.756) 0px 30px 60px -30px, rgba(18, 178, 192, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(68, 68, 148, 0.25) 0px 50px 100px -20px, rgba(254, 31, 31, 0.756) 0px 30px 60px -30px, rgba(28, 49, 139, 0.35) 0px -2px 6px 0px inset;
 }
 
 .btn_animation span:nth-child(1){
     position: absolute;
     top: 0rem; 
     left: 0rem;
-    width: 100%; 
-    height: 3px;
+    width: 5px; 
+    height: 100%;
     background-image: linear-gradient(to right, #171618, #3bff33);
     animation: animimation1 2s linear infinite; 
     -webkit-animation: animation1 2s linear infinite;
@@ -34,20 +51,55 @@ body {
 .btn_animation span:nth-child(2){
     position: absolute;
     top: 0rem; 
-    left: 0rem;
+    right: 0rem;
     width: 5px; 
     height: 100%;
     background-image: linear-gradient(to right, #171618, #3bff33);
     animation: animimation2 2s linear infinite; 
     -webkit-animation: animation2 2s linear infinite;
+    
 }
+
+
+.btn_animation span:nth-child(3){
+  position: absolute;
+  bottom: 0rem; 
+  left: 0rem;
+  width: 100%; 
+  height: 5px;
+  background-image: linear-gradient(to right, #171618, #3bff33);
+  animation: animimation3 2s linear infinite; 
+  -webkit-animation: animation3 3s linear infinite;
+}
+
+.btn_animation span:nth-child(4){
+  position: absolute;
+  top: 0rem; 
+  left: 0rem;
+  width: 100%; 
+  height: 5px;
+  background-image: linear-gradient(to left, #171618, #3bff33);
+  animation: animimation4 2s linear infinite; 
+  -webkit-animation: animation4 3s linear infinite;
+  animation-delay: 1s;
+}
+
+@keyframes animate {
+  0% {
+      filter: hue-rotate(0deg);
+  }
+  
+  100%{
+      filter: hue-rotate(360deg);
+  }
+  }
 
 @keyframes animation1{
   0% {
-    transform: translateX(-100%);
+    transform: translateY(100%);
   }
   100%{
-    transform: translateX(100%);
+    transform: translateX(-100%);
   }
 }
 
@@ -59,6 +111,30 @@ body {
       transform: translateY(100%);
     }
   }
+
+  @keyframes animation3{
+    0% {
+      transform: translateX(-100%);
+    }
+    100%{
+      transform: translateX(100%);
+    }
+  }
+  
+  @keyframes animation4{
+  0% {
+    transform: translateX(100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+  }  
+
+  @media only screen and (mid-width: 600px) {
+
+  }
+  
+
 a:link, a:visited { 
     text-align: center; 
     color: #ffa5d4;   
@@ -72,7 +148,7 @@ a:active {
     color: #3df0fd;
   }
 body{
-    background-color: rgb(232, 151, 151);
+    background-color: rgb(6, 6, 6);
 }
 .Shrek-wrapper{
     width: 100px;
@@ -80,18 +156,12 @@ body{
 
 .Shrek-wrapper img{
     animation: animate 3s linear infinite;
+    align-items: flex-end;
+    width: 60px;
 }
 
 
-@keyframes animate {
-0% {
-    filter: hue-rotate(0deg);
-}
 
-100%{
-    filter: hue-rotate(360deg);
-}
-}
 
 .Invader-Zim-Characters img{
     width: 40px;
@@ -129,10 +199,30 @@ body{
 .Dibb{
 
 }
-
-
-@media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
+/*
+@media (max-width: 999px) {
+  .main-nav {
+    display: none;
   }
+}
+
+.mobile-main-nav {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  background-color: #d5ffb1;
+  position: absolute;
+  top: 132px;
+  left: 0;
+  right: 0;
+}
+
+.mobile-main-nav a {
+  padding: 8px;
+}
+
+@media (min-width: 1000px) {
+  .mobile-nav-wrapper {
+    display: none;
+  }
+}
